--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Image format converter">
-    <script src="https://cdn.jsdelivr.net/npm/vue" type="text/javascript"></script>
+    <script src="vue-2.5.16.min.js"></script>
   </head>
 
   <body>
